[package]
name = "libtest"
version = "0.1.0+1.82.0"
edition = "2021"
description = "a copy-paste of rust's built-in test runner"
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/crates/libtest"
repository = "https://github.com/aatifsyed/libtest"
documentation = "https://docs.rs/libtest"

[dependencies]
getopts = "0.2.21"

[target.'cfg(not(all(windows, target_env = "msvc")))'.dependencies]
libc = { version = "0.2.150", default-features = false }
